<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_dashboard"/>
        <item android:id="@+id/nav_citas"
            android:icon="@drawable/ic_calendar"
            android:title="@string/nav_citas"/>
        <item android:id="@+id/nav_pacientes"
            android:icon="@drawable/ic_people"
            android:title="@string/nav_pacientes"/>
        <item android:id="@+id/nav_expedientes"
            android:icon="@drawable/ic_folder"
            android:title="@string/nav_expedientes"/>
    </group>
    <group>
        <item android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_person"
            android:title="Perfil"/>
        <item android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="Cerrar sesión"/>
    </group>
</menu>